welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:8: error: not found: type int
def move(nbPas:int, versLAvant:boolean):Int ={
               ^Program:8: error: not found: type boolean
def move(nbPas:int, versLAvant:boolean):Int ={
                               ^Program:13: error: type mismatch;
 found   : Unit
 required: Int
		return 
                ^Program:20: error: type mismatch;
 found   : Unit
 required: Int
		return 
                ^